--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a href="#publication" class="about-btn">View Publications</a>
         </div>
         <div class="about-image">
-          <img src="images/dp-1.png" alt="Research Writer" />
+          <img src="dp-1.png" alt="Research Writer" />
         </div>
       </div>
     </div>
